--- a/learning/shopping-list/package.json
+++ b/learning/shopping-list/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.3.1",
+    "mysql": "^2.16.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-transition-group": "^2.5.0",
