--- a/learning/shopping-list/client/package.json
+++ b/learning/shopping-list/client/package.json
@@ -6,10 +6,7 @@
     "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
-    "react-scripts": "2.0.4",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
