--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mario",
+  "name": "vcp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-config-react-app": "^3.0.5"
+  }
 }
