--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-config-react-app": "^3.0.5"
+    "eslint-config-react-app": "^3.0.5",
+    "eslint": "5.6.0"
   }
 }
