--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-airbnb": "^3.0.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
     "i": "^0.3.6",
     "npm": "^6.4.1",
     "react": "^16.6.3",
@@ -23,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha --compilers js:babel-register test/**/*.js",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,10 +29,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
-    "babel-core": "^7.0.0-bridge.0",
     "eslint": "5.6.0",
-    "eslint-config-react-app": "^3.0.5",
-    "mocha": "^5.2.0"
+    "eslint-config-react-app": "^3.0.5"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "testMatch": [
+      "./**/test/*.test.js"
+    ]
   }
 }
