--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "i": "^0.3.6",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "prop-types": "^15.6.2"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint client/src server/src"
