--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ npm-debug.log
 
 .env
 .passport.js
-.DS_Store
 
 build/
 dist/
@@ -26,7 +25,6 @@ dist/
 /build
 
 # misc
-.DS_Store
 .env.local
 .env.development.local
 .env.test.local
@@ -35,3 +33,5 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+client/public/files/
