Fix linting issues.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint 'client/**/*.js' 'server/**/*.js' 'routes/**/*.js'",
+    "fix": "./node_modules/.bin/eslint --fix 'client/**/*.js' 'server/**/*.js' 'routes/**/*.js'",
     "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
