--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "prop-types": "^15.6.2"
   },
   "scripts": {
-    "lint": "./node_modules/.bin/eslint 'client/**/*.js' 'server/**/*.js' 'routes/**/*.js'",
-    "fix": "./node_modules/.bin/eslint --fix 'client/**/*.js' 'server/**/*.js' 'routes/**/*.js'",
+    "lint": "./node_modules/.bin/eslint .",
+    "fix": "./node_modules/.bin/eslint --fix .",
     "client-install": "npm install --prefix client",
     "start": "node server/src/server.js",
     "server": "nodemon server/src/server.js",
