--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ env:
 before_install:
 - openssl aes-256-cbc -K $encrypted_832f2107ea50_key -iv $encrypted_832f2107ea50_iv -in id_rsa.enc -out id_rsa -d
 after_success:
-  - deploy.sh
+  - "./deploy.sh"
