--- a/client/package.json
+++ b/client/package.json
@@ -58,7 +58,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "CI=true node scripts/test.js"
   },
   "browserslist": [
     ">0.2%",
