--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "i": "^0.3.6",
+    "mysql": "^2.16.0",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2"
   },
@@ -15,7 +16,7 @@
     "fix": "./node_modules/.bin/eslint --fix .",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "test": "CI=true npm test --prefix client",
+    "test": "./node_modules/.bin/mocha server/**/*.spec.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -32,6 +33,8 @@
     "@ljharb/eslint-config": "^13.0.0",
     "babel-eslint": "^9.x",
     "babel-plugin-macros": "^2.4.2",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "concurrently": "^4.1.0",
     "eslint": "5.6.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -41,6 +44,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.7"
   },
   "description": "A visual course planner.",
