--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "csv-parse": "^4.1.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "i": "^0.3.6",
