--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "i": "^0.3.6",
     "mysql": "^2.16.0",
     "npm": "^6.4.1",
+    "promisify": "0.0.3",
     "prop-types": "^15.6.2"
   },
   "scripts": {
