--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "i": "^0.3.6",
     "mysql": "^2.16.0",
     "npm": "^6.4.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "prop-types": "^15.6.2"
   },
   "scripts": {
