--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
+    "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "i": "^0.3.6",
     "mysql": "^2.16.0",
