--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "fix": "./node_modules/.bin/eslint --fix .",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "test": "./node_modules/.bin/mocha server/**/*.spec.js",
+    "test": "./node_modules/.bin/mocha server/**/*.spec.js && ( cd client && npm run test )",
+    "server-test": "./node_modules/.bin/mocha server/**/*.spec.js",
+    "client-test": "( cd client && npm run test )",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
