--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vcp",
-  "version": "0.1.0",
+  "name": "vcp-server",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
