--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^5.3.1",
     "i": "^0.3.6",
     "mysql": "^2.16.0",
+    "nodemailer": "^6.0.0",
     "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
