--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "i": "^0.3.6",
+    "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "npm": "^6.4.1",
     "passport": "^0.4.0",
