--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "mysql": "^2.16.0",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
-    "request": "^2.88.0",
-    "request-x-ray": "^0.1.4",
-    "x-ray": "^2.3.3"
+    "request": "^2.88.0"
+    
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
