--- a/client/package.json
+++ b/client/package.json
@@ -34,14 +34,13 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
-    "npm": "^6.9.0",
+    "npm": "^6.4.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "query-string": "^6.4.2",
     "react": "^16.6.3",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
@@ -50,7 +49,7 @@
     "react-dom": "^16.6.3",
     "react-dom-arrow": "^1.0.4",
     "react-filtered-multiselect": "^0.5.1",
-    "react-modal": "^3.8.1",
+    "react-lineto": "^3.1.3",
     "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
