--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "i": "^0.3.6",
-    "morgan": "^1.9.1",
     "mysql": "^2.16.0",
-    "nodemailer": "^6.0.0",
-    "npm": "^6.9.0",
+    "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "randomstring": "^1.1.5"
+    "prop-types": "^15.6.2"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
